# imc3py

./: README.md  pyproject.toml
src/imc3py/: wrapper.py
tests/: test_full.py  test_header.py  test_variables.py
