[project]
name = "imc3py"
version = "0.1.0"
description = "Wrapper for imc3 format by imc Test & Measurement GmbH"
readme = "README.md"
requires-python = ">=3.14"
authors = [
  { name="Kai"}
]
license = { file = "LICENSE" }

dependencies = [
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]